# ray-tracing-in-one-weekend-rust

./: Cargo.toml  README.md  image.ppm
src/: camera.rs  hitable.rs  hitable_list.rs  lib.rs  main.rs  material.rs  ray.rs  scene.rs  sphere.rs  vec3.rs
src/hitable/: hitable_list.rs  mod.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
