[package]
name = "ray-tracing-in-one-weekend-rust"
version = "0.1.0"
authors = ["Carwyn Ellis <carwynellis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

[profile.dev]
# Enable optimizations for dev builds.
opt-level = 3
lto = true
